# force-cli

./: Cargo.toml  LICENSE  README.md  plugin-list.json
src/: main.rs  plugin.rs  renderer.rs  runtime_checker.rs  template_processor.rs  templates.rs
src/commands/: generate.rs  init.rs  plugin_install.rs
src/scripts/: render_ejs.js  render_erb.rb  render_hbs.js  render_jinja.py
