[package]
name = "forge-cli"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <you@example.com>"]
description = "AI-powered project scaffolding CLI"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dirs = "5.0"
fs_extra = "1.3.0"
